test/test-suits/errors/test-13-il_typed_process_context/input.dhl
a($p:string) :- $p = 1 | b
